add more info on Java 9